--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <script src="https://unpkg.com/jszip/dist/jszip.min.js"></script>
-    <script src="docx.min.js"></script>
+    <script src="docx.js"></script>
     <script>
         function loadDocx() {
             var reader = new FileReader();
