Improved images handling

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <script src="docx.js"></script>
 </head>
 <body>
-    <input id="files" type="file" id="files" />
+    <input id="files" type="file" id="files" accept=".docx" />
     <button id="loadButton">load</button>
     <div id="doc">
     </div>
