Migrated to webpack

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <script src="https://unpkg.com/promise-polyfill/dist/polyfill.min.js"></script>
     <script src="https://unpkg.com/jszip/dist/jszip.min.js"></script>
-    <script src="docx.js"></script>
+    <script src="dist/docx-preview.js"></script>
 </head>
 <body>
 	<input id="files" type="file" id="files" accept=".docx"/>    <button id="loadButton">load</button>
