--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
-    <script src="https://unpkg.com/promise-polyfill/dist/polyfill.min.js"></script>
-    <script src="https://unpkg.com/jszip/dist/jszip.min.js"></script>
+    <script crossorigin src="https://unpkg.com/promise-polyfill/dist/polyfill.min.js"></script>
+    <script crossorigin src="https://unpkg.com/jszip/dist/jszip.min.js"></script>
     <script src="dist/docx-preview.js"></script>
 </head>
 <body>
