Improved page-breaking and  project structure

--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <html>
 <head>
-    <script crossorigin src="https://unpkg.com/promise-polyfill/dist/polyfill.min.js"></script>
+    <!--polyfills for IE11-->
+    <script crossorigin src="https://unpkg.com/core-js-bundle@3.3.2/minified.js"></script>
+    <!--dependencies-->
     <script crossorigin src="https://unpkg.com/jszip/dist/jszip.min.js"></script>
+    <!--library-->
     <script src="dist/docx-preview.js"></script>
 </head>
 <body>
