updated webpack refactoring styles

--- a/tests/test1/result.html
+++ b/tests/test1/result.html
@@ -1,10 +1,10 @@
-<!--docxjs library predefined styles--><style type="text/css">.docx-wrapper { background: gray; padding: 30px; padding-bottom: 0px; display: flex; flex-flow: column; align-items: center; } 
+<!--docxjs library predefined styles--><style>.docx-wrapper { background: gray; padding: 30px; padding-bottom: 0px; display: flex; flex-flow: column; align-items: center; } 
                 .docx-wrapper section.docx { background: white; box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); margin-bottom: 30px; }
                 .docx { color: black; }
                 section.docx { box-sizing: border-box; }
                 .docx table { border-collapse: collapse; }
                 .docx table td, .docx table th { vertical-align: top; }
-                .docx p { margin: 0pt; }</style><!--docx document styles--><style type="text/css">.docx span {
+                .docx p { margin: 0pt; }</style><!--docx document styles--><style>.docx span {
   min-height: 11.00pt;
   font-size: 11.00pt;
 }
