--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!--polyfills for IE11-->
     <script crossorigin src="https://unpkg.com/core-js-bundle@3.3.2/minified.js"></script>
     <!--dependencies-->
@@ -8,7 +9,11 @@
     <script src="dist/docx-preview.js"></script>
 </head>
 <body>
-	<input id="files" type="file" id="files" accept=".docx"/>    <button id="loadButton">load</button>
+    <div class="hstack p-2 gap-2 bg-light position-sticky top-0">
+        <input id="files" type="file" class="form-control" style="width: 50ch;" accept=".docx"/>    
+        <button id="loadButton" class="btn btn-primary px-4">Load</button>
+    </div>
+ 
     <div id="doc">
     </div>
 
