update default paragraph height, improved numbering rendering

--- a/tests/render-test/text/result.html
+++ b/tests/render-test/text/result.html
@@ -5,7 +5,7 @@
 section.docx { box-sizing: border-box; }
 .docx table { border-collapse: collapse; }
 .docx table td, .docx table th { vertical-align: top; }
-.docx p { margin: 0pt; }
+.docx p { margin: 0pt; min-height: 1em; }
 </style><!--docx document styles--><style>.docx span {
   min-height: 11.00pt;
   font-size: 11.00pt;
