--- a/tests/render-test/page-layout/result.html
+++ b/tests/render-test/page-layout/result.html
@@ -5,7 +5,7 @@
     section.docx { box-sizing: border-box; }
     .docx table { border-collapse: collapse; }
     .docx table td, .docx table th { vertical-align: top; }
-    .docx p { margin: 0pt; }
+    .docx p { margin: 0pt; min-height: 1em; }
     </style><!--docx document styles--><style>.docx span {
       font-family: Liberation Serif;
       min-height: 12.00pt;
