fixed space collapsing

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="dist/docx-preview.js"></script>
 </head>
 <body>
-    <div class="hstack p-2 gap-2 bg-light position-sticky top-0">
+    <div class="hstack p-2 gap-2 bg-light position-sticky top-0" style="z-index: 1;">
         <input id="files" type="file" class="form-control" style="width: 50ch;" accept=".docx"/>    
         <button id="loadButton" class="btn btn-primary px-4">Load</button>
     </div>
