--- a/tests/render-test/numbering/result.html
+++ b/tests/render-test/numbering/result.html
@@ -6,6 +6,7 @@
     .docx table { border-collapse: collapse; }
     .docx table td, .docx table th { vertical-align: top; }
     .docx p { margin: 0pt; min-height: 1em; }
+    .docx span { white-space: pre-wrap; }
     </style><!--docx document styles--><style>.docx span {
       font-family: Liberation Serif;
     }
