--- a/tests/render-test/header-footer/result.html
+++ b/tests/render-test/header-footer/result.html
@@ -10,12 +10,11 @@
   .docx span { white-space: pre-wrap; }
   </style><!--docx document styles--><style>.docx span {
     font-family: Liberation Serif;
-    min-height: 12.00pt;
-    font-size: 12.00pt;
   }
   .docx p {
   }
   p.docx_Normal {
+    text-align: left;
   }
   p.docx_Normal span {
     font-family: Liberation Serif;
@@ -26,6 +25,7 @@
   p.docx_Style14 {
     margin-top: 12.00pt;
     margin-bottom: 6.00pt;
+    text-align: left;
   }
   p.docx_Style14 span {
     font-family: Liberation Sans;
@@ -37,6 +37,7 @@
     margin-top: 0.00pt;
     margin-bottom: 7.00pt;
     line-height: 1.15;
+    text-align: left;
   }
   p.docx_Style15 span {
     font-family: Liberation Serif;
@@ -48,6 +49,7 @@
     margin-top: 0.00pt;
     margin-bottom: 7.00pt;
     line-height: 1.15;
+    text-align: left;
   }
   p.docx_Style16 span {
     font-family: Liberation Serif;
@@ -58,6 +60,7 @@
   p.docx_Style17 {
     margin-top: 6.00pt;
     margin-bottom: 6.00pt;
+    text-align: left;
   }
   p.docx_Style17 span {
     font-style: italic;
@@ -67,6 +70,7 @@
     color: black;
   }
   p.docx_Style18 {
+    text-align: left;
   }
   p.docx_Style18 span {
     font-family: Liberation Serif;
@@ -74,4 +78,22 @@
     min-height: 12.00pt;
     font-size: 12.00pt;
   }
-  </style><div class="docx-wrapper"><section class="docx" style="padding: 56.7pt; width: 595.3pt; min-height: 841.9pt;"><article><p class="docx docx_Normal"><span class="docx">page1</span></p></article></section><section class="docx" style="padding: 56.7pt; width: 841.9pt; min-height: 595.3pt;"><article><p class="docx docx_Normal"><span class="docx">page2</span></p></article></section></div>
+  p.docx_Style19 {
+    text-align: left;
+  }
+  p.docx_Style19 span {
+    font-family: Liberation Serif;
+    color: black;
+    min-height: 12.00pt;
+    font-size: 12.00pt;
+  }
+  p.docx_Style20 {
+    text-align: left;
+  }
+  p.docx_Style20 span {
+    font-family: Liberation Serif;
+    color: black;
+    min-height: 12.00pt;
+    font-size: 12.00pt;
+  }
+  </style><div class="docx-wrapper"><section class="docx" style="padding: 84.65pt 56.7pt; width: 595.3pt; min-height: 841.9pt;"><header><p class="docx_Style19"><span>Header</span></p></header><article><p class="docx docx_Normal"><span class="docx">Content</span></p></article><footer><p class="docx_Style20"><span>Footer</span></p></footer></section></div>
