Improved numbering and experimental tabs calculation

--- a/tests/render-test/footnote/result.html
+++ b/tests/render-test/footnote/result.html
@@ -2,13 +2,13 @@
   .docx-wrapper { background: gray; padding: 30px; padding-bottom: 0px; display: flex; flex-flow: column; align-items: center; } 
   .docx-wrapper>section.docx { background: white; box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); margin-bottom: 30px; }
   .docx { color: black; }
-  section.docx { box-sizing: border-box; display: flex; flex-flow: column nowrap; }
+  section.docx { box-sizing: border-box; display: flex; flex-flow: column nowrap; position: relative; }
   section.docx>article { margin-bottom: auto; }
   .docx table { border-collapse: collapse; }
   .docx table td, .docx table th { vertical-align: top; }
   .docx p { margin: 0pt; min-height: 1em; }
   .docx span { white-space: pre-wrap; }
-  </style><!--docx document styles--><style>.docx span {
+  </style><!--docxjs document styles--><style>.docx span {
     font-family: Liberation Serif;
   }
   .docx p {
@@ -109,4 +109,4 @@
     font-family: Liberation Serif;
     color: black;
   }
-  </style><div class="docx-wrapper"><section class="docx" style="padding: 56.7pt; width: 595.3pt; min-height: 841.9pt;"><article><p class="docx docx_Normal"><span class="docx_Style15"><sup>1</sup></span><span class="docx">content</span><span class="docx"></span></p></article><ol><li><p class="docx_Style24"><span class="Style14"></span><span><span> </span>footnote</span></p></li></ol></section><section class="docx" style="padding: 56.7pt; width: 595.3pt; min-height: 841.9pt;"><article><p class="docx docx_Normal"><span class="docx">content2</span><span class="docx_Style15"><sup>1</sup></span></p></article><ol><li><p class="docx_Style24"><span class="Style14"></span><span><span> </span>footnote2</span></p></li></ol></section></div>
+</style><div class="docx-wrapper"><section class="docx" style="padding: 56.7pt; width: 595.3pt; min-height: 841.9pt;"><article><p class="docx docx_Normal"><span class="docx_Style15"><sup>1</sup></span><span class="docx">content</span><span class="docx"></span></p></article><ol><li><p class="docx_Style24"><span class="Style14"></span><span><span> </span>footnote</span></p></li></ol></section><section class="docx" style="padding: 56.7pt; width: 595.3pt; min-height: 841.9pt;"><article><p class="docx docx_Normal"><span class="docx">content2</span><span class="docx_Style15"><sup>1</sup></span></p></article><ol><li><p class="docx_Style24"><span class="Style14"></span><span><span> </span>footnote2</span></p></li></ol></section></div>
