--- a/tests/render-test/header-footer/result.html
+++ b/tests/render-test/header-footer/result.html
@@ -2,7 +2,7 @@
   .docx-wrapper { background: gray; padding: 30px; padding-bottom: 0px; display: flex; flex-flow: column; align-items: center; } 
   .docx-wrapper>section.docx { background: white; box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); margin-bottom: 30px; }
   .docx { color: black; }
-  section.docx { box-sizing: border-box; display: flex; flex-flow: column nowrap; position: relative; }
+  section.docx { box-sizing: border-box; display: flex; flex-flow: column nowrap; position: relative; overflow: hidden; }
   section.docx>article { margin-bottom: auto; }
   .docx table { border-collapse: collapse; }
   .docx table td, .docx table th { vertical-align: top; }
@@ -96,4 +96,4 @@
     min-height: 12.00pt;
     font-size: 12.00pt;
   }
-  </style><div class="docx-wrapper"><section class="docx" style="padding: 84.65pt 56.7pt; width: 595.3pt; min-height: 841.9pt;"><header><p class="docx_Style19"><span>Header</span></p></header><article><p class="docx docx_Normal"><span class="docx">Content</span></p></article><footer><p class="docx_Style20"><span>Footer</span></p></footer></section></div>
+  </style><div class="docx-wrapper"><section class="docx" style="padding: 84.65pt 56.7pt; width: 595.3pt; min-height: 841.9pt;"><header><p class="docx docx_Style19"><span class="docx">Header</span></p></header><article><p class="docx docx_Normal"><span class="docx">Content</span></p></article><footer><p class="docx docx_Style20"><span class="docx">Footer</span></p></footer></section></div>
