minor fixes to tabs rendering fixed rendering of headers/footers added parsing of custom props and fields

--- a/tests/render-test/header-footer/result.html
+++ b/tests/render-test/header-footer/result.html
@@ -14,6 +14,8 @@
   .docx p {
   }
   p.docx_Normal {
+    margin-top: 0.00pt;
+    margin-bottom: 0.00pt;
     text-align: left;
   }
   p.docx_Normal span {
@@ -70,6 +72,8 @@
     color: black;
   }
   p.docx_Style18 {
+    margin-top: 0.00pt;
+    margin-bottom: 0.00pt;
     text-align: left;
   }
   p.docx_Style18 span {
@@ -79,6 +83,8 @@
     font-size: 12.00pt;
   }
   p.docx_Style19 {
+    margin-top: 0.00pt;
+    margin-bottom: 0.00pt;
     text-align: left;
   }
   p.docx_Style19 span {
@@ -88,6 +94,8 @@
     font-size: 12.00pt;
   }
   p.docx_Style20 {
+    margin-top: 0.00pt;
+    margin-bottom: 0.00pt;
     text-align: left;
   }
   p.docx_Style20 span {
@@ -96,4 +104,15 @@
     min-height: 12.00pt;
     font-size: 12.00pt;
   }
-  </style><div class="docx-wrapper"><section class="docx" style="padding: 84.65pt 56.7pt; width: 595.3pt; min-height: 841.9pt;"><header><p class="docx docx_Style19"><span class="docx">Header</span></p></header><article><p class="docx docx_Normal"><span class="docx">Content</span></p></article><footer><p class="docx docx_Style20"><span class="docx">Footer</span></p></footer></section></div>
+  p.docx_Style21 {
+    margin-top: 0.00pt;
+    margin-bottom: 0.00pt;
+    text-align: left;
+  }
+  p.docx_Style21 span {
+    font-family: Liberation Serif;
+    color: black;
+    min-height: 12.00pt;
+    font-size: 12.00pt;
+  }
+  </style><div class="docx-wrapper"><section class="docx" style="padding: 84.8pt 56.7pt 84.65pt; width: 595.3pt; min-height: 841.9pt;"><header><p class="docx docx_Style20"><span class="docx">First Header</span></p></header><article><p class="docx docx_Normal"><span class="docx">Content</span><span class="docx"></span></p></article><footer><p class="docx docx_Style21"><span class="docx">First Footer</span></p></footer></section><section class="docx" style="padding: 84.8pt 56.7pt 84.65pt; width: 595.3pt; min-height: 841.9pt;"><header><p class="docx docx_Style20"><span class="docx" style="color: black; min-height: 12pt; font-size: 12pt;">Even</span><span class="docx"> Header</span></p></header><article><p class="docx docx_Normal"><span class="docx"></span><span class="docx"></span></p></article><footer><p class="docx docx_Style21"><span class="docx" style="color: black; min-height: 12pt; font-size: 12pt;">Even</span><span class="docx"> Footer</span></p></footer></section><section class="docx" style="padding: 84.8pt 56.7pt 84.65pt; width: 595.3pt; min-height: 841.9pt;"><header><p class="docx docx_Style20"><span class="docx" style="color: black; min-height: 12pt; font-size: 12pt;">Odd</span><span class="docx"> Header</span></p></header><article><p class="docx docx_Normal"><span class="docx"></span></p></article><footer><p class="docx docx_Style21"><span class="docx" style="color: black; min-height: 12pt; font-size: 12pt;">Odd</span><span class="docx"> Footer</span></p></footer></section></div>
