--- a/tests/render-test/text-break/result.html
+++ b/tests/render-test/text-break/result.html
@@ -7,7 +7,7 @@
   .docx table { border-collapse: collapse; }
   .docx table td, .docx table th { vertical-align: top; }
   .docx p { margin: 0pt; min-height: 1em; }
-  .docx span { white-space: pre-wrap; }
+  .docx span { white-space: pre-wrap; overflow-wrap: break-word; }
   </style><!--docxjs document styles--><style>.docx span {
     font-family: Liberation Serif;
     min-height: 12.00pt;
