--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
+<!DOCTYPE html>
 <html>
 
 <head>
+    <meta charset="UTF-8">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
@@ -15,6 +17,10 @@
 </head>
 
 <body>
+    <div class="hstack bg-black">
+        <a class="mx-auto p-2 text-white" href="https://how-to-help-ukraine-now.super.site">Support Ukraine 🇺🇦</a>
+    </div>
+
     <div class="hstack p-2 gap-2 bg-light position-sticky top-0" style="z-index: 1;">
         <input id="files" type="file" class="form-control" style="width: 50ch;" accept=".docx" />
         <button id="loadButton" class="btn btn-primary px-4">Load</button>
