added useBase64URL option replaced Length with string values fixed vertAlign rendering improved unit tests refactoring updated packages

--- a/tests/render-test/numbering/result.html
+++ b/tests/render-test/numbering/result.html
@@ -8,231 +8,232 @@
   .docx table td, .docx table th { vertical-align: top; }
   .docx p { margin: 0pt; min-height: 1em; }
   .docx span { white-space: pre-wrap; overflow-wrap: break-word; }
+  .docx a { color: inherit; text-decoration: inherit; }
   </style><!--docxjs document styles--><style>.docx span {
     font-family: Liberation Serif;
   }
   .docx p {
   }
-  p.docx_Normal {
+  p.docx_normal {
     text-align: left;
   }
-  p.docx_Normal span {
+  p.docx_normal span {
     font-family: Liberation Serif;
     color: black;
     min-height: 12.00pt;
     font-size: 12.00pt;
   }
-  span.docx_Style14 {
+  span.docx_style14 {
   }
-  span.docx_Style15 {
+  span.docx_style15 {
     font-family: OpenSymbol;
   }
-  span.docx_ListLabel1 {
+  span.docx_listlabel1 {
   }
-  span.docx_ListLabel2 {
+  span.docx_listlabel2 {
   }
-  span.docx_ListLabel3 {
+  span.docx_listlabel3 {
   }
-  span.docx_ListLabel4 {
+  span.docx_listlabel4 {
   }
-  span.docx_ListLabel5 {
+  span.docx_listlabel5 {
   }
-  span.docx_ListLabel6 {
+  span.docx_listlabel6 {
   }
-  span.docx_ListLabel7 {
+  span.docx_listlabel7 {
   }
-  span.docx_ListLabel8 {
+  span.docx_listlabel8 {
   }
-  span.docx_ListLabel9 {
+  span.docx_listlabel9 {
   }
-  span.docx_ListLabel10 {
+  span.docx_listlabel10 {
   }
-  span.docx_ListLabel11 {
+  span.docx_listlabel11 {
   }
-  span.docx_ListLabel12 {
+  span.docx_listlabel12 {
   }
-  span.docx_ListLabel13 {
+  span.docx_listlabel13 {
   }
-  span.docx_ListLabel14 {
+  span.docx_listlabel14 {
   }
-  span.docx_ListLabel15 {
+  span.docx_listlabel15 {
   }
-  span.docx_ListLabel16 {
+  span.docx_listlabel16 {
   }
-  span.docx_ListLabel17 {
+  span.docx_listlabel17 {
   }
-  span.docx_ListLabel18 {
+  span.docx_listlabel18 {
   }
-  span.docx_ListLabel19 {
+  span.docx_listlabel19 {
   }
-  span.docx_ListLabel20 {
+  span.docx_listlabel20 {
   }
-  span.docx_ListLabel21 {
+  span.docx_listlabel21 {
   }
-  span.docx_ListLabel22 {
+  span.docx_listlabel22 {
   }
-  span.docx_ListLabel23 {
+  span.docx_listlabel23 {
   }
-  span.docx_ListLabel24 {
+  span.docx_listlabel24 {
   }
-  span.docx_ListLabel25 {
+  span.docx_listlabel25 {
   }
-  span.docx_ListLabel26 {
+  span.docx_listlabel26 {
   }
-  span.docx_ListLabel27 {
+  span.docx_listlabel27 {
   }
-  span.docx_ListLabel28 {
+  span.docx_listlabel28 {
   }
-  span.docx_ListLabel29 {
+  span.docx_listlabel29 {
   }
-  span.docx_ListLabel30 {
+  span.docx_listlabel30 {
   }
-  span.docx_ListLabel31 {
+  span.docx_listlabel31 {
   }
-  span.docx_ListLabel32 {
+  span.docx_listlabel32 {
   }
-  span.docx_ListLabel33 {
+  span.docx_listlabel33 {
   }
-  span.docx_ListLabel34 {
+  span.docx_listlabel34 {
   }
-  span.docx_ListLabel35 {
+  span.docx_listlabel35 {
   }
-  span.docx_ListLabel36 {
+  span.docx_listlabel36 {
   }
-  span.docx_ListLabel37 {
+  span.docx_listlabel37 {
   }
-  span.docx_ListLabel38 {
+  span.docx_listlabel38 {
   }
-  span.docx_ListLabel39 {
+  span.docx_listlabel39 {
   }
-  span.docx_ListLabel40 {
+  span.docx_listlabel40 {
   }
-  span.docx_ListLabel41 {
+  span.docx_listlabel41 {
   }
-  span.docx_ListLabel42 {
+  span.docx_listlabel42 {
   }
-  span.docx_ListLabel43 {
+  span.docx_listlabel43 {
   }
-  span.docx_ListLabel44 {
+  span.docx_listlabel44 {
   }
-  span.docx_ListLabel45 {
+  span.docx_listlabel45 {
   }
-  span.docx_ListLabel46 {
+  span.docx_listlabel46 {
   }
-  span.docx_ListLabel47 {
+  span.docx_listlabel47 {
   }
-  span.docx_ListLabel48 {
+  span.docx_listlabel48 {
   }
-  span.docx_ListLabel49 {
+  span.docx_listlabel49 {
   }
-  span.docx_ListLabel50 {
+  span.docx_listlabel50 {
   }
-  span.docx_ListLabel51 {
+  span.docx_listlabel51 {
   }
-  span.docx_ListLabel52 {
+  span.docx_listlabel52 {
   }
-  span.docx_ListLabel53 {
+  span.docx_listlabel53 {
   }
-  span.docx_ListLabel54 {
+  span.docx_listlabel54 {
   }
-  span.docx_ListLabel55 {
+  span.docx_listlabel55 {
   }
-  span.docx_ListLabel56 {
+  span.docx_listlabel56 {
   }
-  span.docx_ListLabel57 {
+  span.docx_listlabel57 {
   }
-  span.docx_ListLabel58 {
+  span.docx_listlabel58 {
   }
-  span.docx_ListLabel59 {
+  span.docx_listlabel59 {
   }
-  span.docx_ListLabel60 {
+  span.docx_listlabel60 {
   }
-  span.docx_ListLabel61 {
+  span.docx_listlabel61 {
   }
-  span.docx_ListLabel62 {
+  span.docx_listlabel62 {
   }
-  span.docx_ListLabel63 {
+  span.docx_listlabel63 {
   }
-  span.docx_ListLabel64 {
+  span.docx_listlabel64 {
   }
-  span.docx_ListLabel65 {
+  span.docx_listlabel65 {
   }
-  span.docx_ListLabel66 {
+  span.docx_listlabel66 {
   }
-  span.docx_ListLabel67 {
+  span.docx_listlabel67 {
   }
-  span.docx_ListLabel68 {
+  span.docx_listlabel68 {
   }
-  span.docx_ListLabel69 {
+  span.docx_listlabel69 {
   }
-  span.docx_ListLabel70 {
+  span.docx_listlabel70 {
   }
-  span.docx_ListLabel71 {
+  span.docx_listlabel71 {
   }
-  span.docx_ListLabel72 {
+  span.docx_listlabel72 {
   }
-  p.docx_Style16 {
+  p.docx_style16 {
     margin-top: 12.00pt;
     margin-bottom: 6.00pt;
     text-align: left;
   }
-  p.docx_Style16 span {
+  p.docx_style16 span {
     font-family: Liberation Sans;
     min-height: 14.00pt;
     font-size: 14.00pt;
     color: black;
   }
-  p.docx_Style17 {
+  p.docx_style17 {
     margin-top: 0.00pt;
     margin-bottom: 7.00pt;
     line-height: 1.15;
     text-align: left;
   }
-  p.docx_Style17 span {
+  p.docx_style17 span {
     font-family: Liberation Serif;
     color: black;
     min-height: 12.00pt;
     font-size: 12.00pt;
   }
-  p.docx_Style18 {
+  p.docx_style18 {
     margin-top: 0.00pt;
     margin-bottom: 7.00pt;
     line-height: 1.15;
     text-align: left;
   }
-  p.docx_Style18 span {
+  p.docx_style18 span {
     font-family: Liberation Serif;
     color: black;
     min-height: 12.00pt;
     font-size: 12.00pt;
   }
-  p.docx_Style19 {
+  p.docx_style19 {
     margin-top: 6.00pt;
     margin-bottom: 6.00pt;
     text-align: left;
   }
-  p.docx_Style19 span {
+  p.docx_style19 span {
     font-style: italic;
     min-height: 12.00pt;
     font-size: 12.00pt;
     font-family: Liberation Serif;
     color: black;
   }
-  p.docx_Style20 {
+  p.docx_style20 {
     text-align: left;
   }
-  p.docx_Style20 span {
+  p.docx_style20 span {
     font-family: Liberation Serif;
     color: black;
     min-height: 12.00pt;
     font-size: 12.00pt;
   }
-  p.docx_Style21 {
+  p.docx_style21 {
     text-indent: -0.00pt;
     margin-left: 0.00pt;
     text-align: left;
   }
-  p.docx_Style21 span {
+  p.docx_style21 span {
     font-family: Liberation Serif;
     color: black;
     min-height: 12.00pt;
@@ -2959,4 +2960,4 @@
   .docx-wrapper {
     counter-reset: docx-num-2-0 docx-num-3-0 docx-num-4-0 docx-num-5-0 docx-num-6-0 docx-num-7-0 docx-num-8-0 docx-num-9-0 docx-num-10-0 docx-num-11-0 docx-num-12-0 docx-num-13-0 docx-num-14-0 docx-num-15-0 docx-num-16-0 docx-num-17-0 docx-num-18-0 docx-num-19-0 docx-num-20-0 docx-num-21-0 docx-num-22-0;
   }
-  </style><div class="docx-wrapper"><section class="docx" style="padding: 56.7pt; width: 595.3pt; min-height: 841.9pt;"><article><p class="docx docx_Normal"><span class="docx">Bullets</span></p><p class="docx docx-num-2-0 docx_Normal"><span class="docx">one</span></p><p class="docx docx-num-2-0 docx_Normal"><span class="docx">two</span></p><p class="docx docx-num-2-0 docx_Normal"><span class="docx">three</span></p><p class="docx docx_Normal"><span class="docx"></span></p><p class="docx docx-num-5-0 docx_Normal"><span class="docx">one</span></p><p class="docx docx-num-5-0 docx_Normal"><span class="docx">two</span></p><p class="docx docx-num-5-0 docx_Normal"><span class="docx">three</span></p><p class="docx docx_Normal"><span class="docx"></span></p><p class="docx docx-num-6-0 docx_Normal"><span class="docx">one</span></p><p class="docx docx-num-6-0 docx_Normal"><span class="docx">two</span></p><p class="docx docx-num-6-0 docx_Normal"><span class="docx">three</span></p><p class="docx docx_Normal"><span class="docx"></span></p><p class="docx docx-num-7-0 docx_Normal"><span class="docx">one</span></p><p class="docx docx-num-7-0 docx_Normal"><span class="docx">two</span></p><p class="docx docx-num-7-0 docx_Normal"><span class="docx">three</span></p><p class="docx docx_Normal"><span class="docx"></span></p><p class="docx docx-num-8-0 docx_Normal"><span class="docx">one</span></p><p class="docx docx-num-8-0 docx_Normal"><span class="docx">two</span></p><p class="docx docx-num-8-0 docx_Normal"><span class="docx">three</span></p><p class="docx docx_Normal"><span class="docx"></span></p><p class="docx docx-num-9-0 docx_Normal"><span class="docx">one</span></p><p class="docx docx-num-9-0 docx_Normal"><span class="docx">two</span></p><p class="docx docx-num-9-0 docx_Normal"><span class="docx">three</span></p><p class="docx docx_Normal"><span class="docx"></span></p><p class="docx docx-num-10-0 docx_Normal"><span class="docx">one</span></p><p class="docx docx-num-10-0 docx_Normal"><span class="docx">two</span></p><p class="docx docx-num-10-0 docx_Normal"><span class="docx">three</span></p><p class="docx docx_Normal"><span class="docx"></span></p><p class="docx docx-num-11-0 docx_Normal"><span class="docx">one</span></p><p class="docx docx-num-11-0 docx_Normal"><span class="docx">two</span></p><p class="docx docx-num-11-0 docx_Normal"><span class="docx">three</span></p><p class="docx docx-num-0-0 docx_Normal" style="text-indent: 0pt; margin-left: 36pt;"><span class="docx"></span><span class="docx"></span></p></article></section><section class="docx" style="padding: 56.7pt; width: 595.3pt; min-height: 841.9pt;"><article><p class="docx docx_Normal"><span class="docx">Numbers</span></p><p class="docx docx-num-3-0 docx_Normal"><span class="docx">one</span></p><p class="docx docx-num-3-0 docx_Normal"><span class="docx">two</span></p><p class="docx docx-num-3-0 docx_Normal"><span class="docx">three</span></p><p class="docx docx_Normal"><span class="docx"></span></p><p class="docx docx-num-12-0 docx_Normal"><span class="docx">one</span></p><p class="docx docx-num-12-0 docx_Normal"><span class="docx">two</span></p><p class="docx docx-num-12-0 docx_Normal"><span class="docx">three</span></p><p class="docx docx_Normal"><span class="docx"></span></p><p class="docx docx-num-13-0 docx_Normal"><span class="docx">one</span></p><p class="docx docx-num-13-0 docx_Normal"><span class="docx">two</span></p><p class="docx docx-num-13-0 docx_Normal"><span class="docx">three</span></p><p class="docx docx_Normal"><span class="docx"></span></p><p class="docx docx-num-17-0 docx_Normal"><span class="docx">one</span></p><p class="docx docx-num-17-0 docx_Normal"><span class="docx">two</span></p><p class="docx docx-num-17-0 docx_Normal"><span class="docx">three</span></p><p class="docx docx_Normal"><span class="docx"></span></p><p class="docx docx-num-4-0 docx_Normal"><span class="docx">one</span></p><p class="docx docx-num-4-0 docx_Normal"><span class="docx">two</span></p><p class="docx docx-num-4-0 docx_Normal"><span class="docx">three</span></p><p class="docx docx_Normal"><span class="docx"></span></p><p class="docx docx-num-14-0 docx_Normal"><span class="docx">one</span></p><p class="docx docx-num-14-0 docx_Normal"><span class="docx">two</span></p><p class="docx docx-num-14-0 docx_Normal"><span class="docx">three</span></p><p class="docx docx_Normal"><span class="docx"></span></p><p class="docx docx-num-15-0 docx_Normal"><span class="docx">one</span></p><p class="docx docx-num-15-0 docx_Normal"><span class="docx">two</span></p><p class="docx docx-num-15-0 docx_Normal"><span class="docx">three</span></p><p class="docx docx_Normal"><span class="docx"></span></p><p class="docx docx-num-16-0 docx_Normal"><span class="docx">one</span></p><p class="docx docx-num-16-0 docx_Normal"><span class="docx">two</span></p><p class="docx docx-num-16-0 docx_Normal"><span class="docx">three</span></p><p class="docx docx_Normal"><span class="docx"></span><span class="docx"></span></p></article></section><section class="docx" style="padding: 56.7pt; width: 595.3pt; min-height: 841.9pt;"><article><p class="docx docx_Normal"><span class="docx">Nested numbering</span></p><p class="docx docx-num-18-0 docx_Normal"><span class="docx">one</span></p><p class="docx docx-num-18-0 docx_Normal"><span class="docx">two</span></p><p class="docx docx-num-18-0 docx_Normal"><span class="docx">three</span></p><p class="docx docx-num-18-1 docx_Normal"><span class="docx">four</span></p><p class="docx docx-num-18-1 docx_Normal"><span class="docx">five</span></p><p class="docx docx_Normal"><span class="docx"></span></p><p class="docx docx-num-20-0 docx_Normal"><span class="docx">one</span></p><p class="docx docx-num-20-0 docx_Normal"><span class="docx">two</span></p><p class="docx docx-num-20-0 docx_Normal"><span class="docx">three</span></p><p class="docx docx-num-20-1 docx_Normal"><span class="docx">four</span></p><p class="docx docx-num-20-1 docx_Normal"><span class="docx">five</span></p><p class="docx docx_Normal"><span class="docx"></span><span class="docx"></span></p></article></section><section class="docx" style="padding: 56.7pt; width: 595.3pt; min-height: 841.9pt;"><article><p class="docx docx_Normal"><span class="docx">Suff</span></p><p class="docx docx_Normal"><span class="docx"></span></p><p class="docx docx-num-21-0 docx_Normal"><span class="docx">one</span></p><p class="docx docx-num-21-0 docx_Normal"><span class="docx">two</span></p><p class="docx docx-num-21-0 docx_Normal"><span class="docx">three</span></p><p class="docx docx_Normal"><span class="docx"></span></p><p class="docx docx-num-19-0 docx_Normal"><span class="docx">one</span></p><p class="docx docx-num-19-0 docx_Normal"><span class="docx">two</span></p><p class="docx docx-num-19-0 docx_Normal"><span class="docx">three</span></p><p class="docx docx_Normal"><span class="docx"></span></p><p class="docx docx-num-22-0 docx_Normal"><span class="docx">one</span></p><p class="docx docx-num-22-0 docx_Normal"><span class="docx">two</span></p><p class="docx docx-num-22-0 docx_Normal"><span class="docx">three</span></p></article></section></div>
+  </style><div class="docx-wrapper"><section class="docx" style="padding: 56.7pt; width: 595.3pt; min-height: 841.9pt;"><article><p class="docx_normal"><span>Bullets</span></p><p class="docx_normal docx-num-2-0"><span>one</span></p><p class="docx_normal docx-num-2-0"><span>two</span></p><p class="docx_normal docx-num-2-0"><span>three</span></p><p class="docx_normal"><span></span></p><p class="docx_normal docx-num-5-0"><span>one</span></p><p class="docx_normal docx-num-5-0"><span>two</span></p><p class="docx_normal docx-num-5-0"><span>three</span></p><p class="docx_normal"><span></span></p><p class="docx_normal docx-num-6-0"><span>one</span></p><p class="docx_normal docx-num-6-0"><span>two</span></p><p class="docx_normal docx-num-6-0"><span>three</span></p><p class="docx_normal"><span></span></p><p class="docx_normal docx-num-7-0"><span>one</span></p><p class="docx_normal docx-num-7-0"><span>two</span></p><p class="docx_normal docx-num-7-0"><span>three</span></p><p class="docx_normal"><span></span></p><p class="docx_normal docx-num-8-0"><span>one</span></p><p class="docx_normal docx-num-8-0"><span>two</span></p><p class="docx_normal docx-num-8-0"><span>three</span></p><p class="docx_normal"><span></span></p><p class="docx_normal docx-num-9-0"><span>one</span></p><p class="docx_normal docx-num-9-0"><span>two</span></p><p class="docx_normal docx-num-9-0"><span>three</span></p><p class="docx_normal"><span></span></p><p class="docx_normal docx-num-10-0"><span>one</span></p><p class="docx_normal docx-num-10-0"><span>two</span></p><p class="docx_normal docx-num-10-0"><span>three</span></p><p class="docx_normal"><span></span></p><p class="docx_normal docx-num-11-0"><span>one</span></p><p class="docx_normal docx-num-11-0"><span>two</span></p><p class="docx_normal docx-num-11-0"><span>three</span></p><p class="docx_normal docx-num-0-0" style="text-indent: 0pt; margin-left: 36pt;"><span></span><span></span></p></article></section><section class="docx" style="padding: 56.7pt; width: 595.3pt; min-height: 841.9pt;"><article><p class="docx_normal"><span>Numbers</span></p><p class="docx_normal docx-num-3-0"><span>one</span></p><p class="docx_normal docx-num-3-0"><span>two</span></p><p class="docx_normal docx-num-3-0"><span>three</span></p><p class="docx_normal"><span></span></p><p class="docx_normal docx-num-12-0"><span>one</span></p><p class="docx_normal docx-num-12-0"><span>two</span></p><p class="docx_normal docx-num-12-0"><span>three</span></p><p class="docx_normal"><span></span></p><p class="docx_normal docx-num-13-0"><span>one</span></p><p class="docx_normal docx-num-13-0"><span>two</span></p><p class="docx_normal docx-num-13-0"><span>three</span></p><p class="docx_normal"><span></span></p><p class="docx_normal docx-num-17-0"><span>one</span></p><p class="docx_normal docx-num-17-0"><span>two</span></p><p class="docx_normal docx-num-17-0"><span>three</span></p><p class="docx_normal"><span></span></p><p class="docx_normal docx-num-4-0"><span>one</span></p><p class="docx_normal docx-num-4-0"><span>two</span></p><p class="docx_normal docx-num-4-0"><span>three</span></p><p class="docx_normal"><span></span></p><p class="docx_normal docx-num-14-0"><span>one</span></p><p class="docx_normal docx-num-14-0"><span>two</span></p><p class="docx_normal docx-num-14-0"><span>three</span></p><p class="docx_normal"><span></span></p><p class="docx_normal docx-num-15-0"><span>one</span></p><p class="docx_normal docx-num-15-0"><span>two</span></p><p class="docx_normal docx-num-15-0"><span>three</span></p><p class="docx_normal"><span></span></p><p class="docx_normal docx-num-16-0"><span>one</span></p><p class="docx_normal docx-num-16-0"><span>two</span></p><p class="docx_normal docx-num-16-0"><span>three</span></p><p class="docx_normal"><span></span><span></span></p></article></section><section class="docx" style="padding: 56.7pt; width: 595.3pt; min-height: 841.9pt;"><article><p class="docx_normal"><span>Nested numbering</span></p><p class="docx_normal docx-num-18-0"><span>one</span></p><p class="docx_normal docx-num-18-0"><span>two</span></p><p class="docx_normal docx-num-18-0"><span>three</span></p><p class="docx_normal docx-num-18-1"><span>four</span></p><p class="docx_normal docx-num-18-1"><span>five</span></p><p class="docx_normal"><span></span></p><p class="docx_normal docx-num-20-0"><span>one</span></p><p class="docx_normal docx-num-20-0"><span>two</span></p><p class="docx_normal docx-num-20-0"><span>three</span></p><p class="docx_normal docx-num-20-1"><span>four</span></p><p class="docx_normal docx-num-20-1"><span>five</span></p><p class="docx_normal"><span></span><span></span></p></article></section><section class="docx" style="padding: 56.7pt; width: 595.3pt; min-height: 841.9pt;"><article><p class="docx_normal"><span>Suff</span></p><p class="docx_normal"><span></span></p><p class="docx_normal docx-num-21-0"><span>one</span></p><p class="docx_normal docx-num-21-0"><span>two</span></p><p class="docx_normal docx-num-21-0"><span>three</span></p><p class="docx_normal"><span></span></p><p class="docx_normal docx-num-19-0"><span>one</span></p><p class="docx_normal docx-num-19-0"><span>two</span></p><p class="docx_normal docx-num-19-0"><span>three</span></p><p class="docx_normal"><span></span></p><p class="docx_normal docx-num-22-0"><span>one</span></p><p class="docx_normal docx-num-22-0"><span>two</span></p><p class="docx_normal docx-num-22-0"><span>three</span></p></article></section></div>
