--- a/tests/render-test/footnote/result.html
+++ b/tests/render-test/footnote/result.html
@@ -8,105 +8,106 @@
   .docx table td, .docx table th { vertical-align: top; }
   .docx p { margin: 0pt; min-height: 1em; }
   .docx span { white-space: pre-wrap; overflow-wrap: break-word; }
+  .docx a { color: inherit; text-decoration: inherit; }
   </style><!--docxjs document styles--><style>.docx span {
     font-family: Liberation Serif;
   }
   .docx p {
   }
-  p.docx_Normal {
+  p.docx_normal {
     text-align: left;
   }
-  p.docx_Normal span {
+  p.docx_normal span {
     font-family: Liberation Serif;
     color: black;
     min-height: 12.00pt;
     font-size: 12.00pt;
   }
-  span.docx_Style14 {
+  span.docx_style14 {
   }
-  span.docx_Style15 {
+  span.docx_style15 {
   }
-  span.docx_Style16 {
+  span.docx_style16 {
   }
-  span.docx_Style17 {
+  span.docx_style17 {
   }
-  p.docx_Style18 {
+  p.docx_style18 {
     margin-top: 12.00pt;
     margin-bottom: 6.00pt;
     text-align: left;
   }
-  p.docx_Style18 span {
+  p.docx_style18 span {
     font-family: Liberation Sans;
     min-height: 14.00pt;
     font-size: 14.00pt;
     color: black;
   }
-  p.docx_Style19 {
+  p.docx_style19 {
     margin-top: 0.00pt;
     margin-bottom: 7.00pt;
     line-height: 1.15;
     text-align: left;
   }
-  p.docx_Style19 span {
+  p.docx_style19 span {
     font-family: Liberation Serif;
     color: black;
     min-height: 12.00pt;
     font-size: 12.00pt;
   }
-  p.docx_Style20 {
+  p.docx_style20 {
     margin-top: 0.00pt;
     margin-bottom: 7.00pt;
     line-height: 1.15;
     text-align: left;
   }
-  p.docx_Style20 span {
+  p.docx_style20 span {
     font-family: Liberation Serif;
     color: black;
     min-height: 12.00pt;
     font-size: 12.00pt;
   }
-  p.docx_Style21 {
+  p.docx_style21 {
     margin-top: 6.00pt;
     margin-bottom: 6.00pt;
     text-align: left;
   }
-  p.docx_Style21 span {
+  p.docx_style21 span {
     font-style: italic;
     min-height: 12.00pt;
     font-size: 12.00pt;
     font-family: Liberation Serif;
     color: black;
   }
-  p.docx_Style22 {
+  p.docx_style22 {
     text-align: left;
   }
-  p.docx_Style22 span {
+  p.docx_style22 span {
     font-family: Liberation Serif;
     color: black;
     min-height: 12.00pt;
     font-size: 12.00pt;
   }
-  p.docx_Style23 {
+  p.docx_style23 {
     border-bottom: 0.25pt solid #808080;
     margin-top: 0.00pt;
     margin-bottom: 14.15pt;
     text-align: left;
   }
-  p.docx_Style23 span {
+  p.docx_style23 span {
     min-height: 6.00pt;
     font-size: 6.00pt;
     font-family: Liberation Serif;
     color: black;
   }
-  p.docx_Style24 {
+  p.docx_style24 {
     text-indent: -16.95pt;
     margin-left: 16.95pt;
     text-align: left;
   }
-  p.docx_Style24 span {
+  p.docx_style24 span {
     min-height: 10.00pt;
     font-size: 10.00pt;
     font-family: Liberation Serif;
     color: black;
   }
-</style><div class="docx-wrapper"><section class="docx" style="padding: 56.7pt; width: 595.3pt; min-height: 841.9pt;"><article><p class="docx docx_Normal"><span class="docx_Style15"><sup>1</sup></span><span class="docx">content</span><span class="docx"></span></p></article><ol><li><p class="docx_Style24"><span class="Style14"></span><span><span> </span>footnote</span></p></li></ol></section><section class="docx" style="padding: 56.7pt; width: 595.3pt; min-height: 841.9pt;"><article><p class="docx docx_Normal"><span class="docx">content2</span><span class="docx_Style15"><sup>1</sup></span></p></article><ol><li><p class="docx_Style24"><span class="Style14"></span><span><span> </span>footnote2</span></p></li></ol></section></div>
+  </style><div class="docx-wrapper"><section class="docx" style="padding: 56.7pt; width: 595.3pt; min-height: 841.9pt;"><article><p class="docx_normal"><span class="docx_style15"><sup>1</sup></span><span>content</span><span></span></p></article><ol><li><p class="docx_style24"><span class="docx_style14"></span><span><span> </span>footnote</span></p></li></ol></section><section class="docx" style="padding: 56.7pt; width: 595.3pt; min-height: 841.9pt;"><article><p class="docx_normal"><span>content2</span><span class="docx_style15"><sup>1</sup></span></p></article><ol><li><p class="docx_style24"><span class="docx_style14"></span><span><span> </span>footnote2</span></p></li></ol></section></div>
