--- a/tests/render-test/header-footer/result.html
+++ b/tests/render-test/header-footer/result.html
@@ -8,111 +8,112 @@
   .docx table td, .docx table th { vertical-align: top; }
   .docx p { margin: 0pt; min-height: 1em; }
   .docx span { white-space: pre-wrap; overflow-wrap: break-word; }
+  .docx a { color: inherit; text-decoration: inherit; }
   </style><!--docxjs document styles--><style>.docx span {
     font-family: Liberation Serif;
   }
   .docx p {
   }
-  p.docx_Normal {
+  p.docx_normal {
     margin-top: 0.00pt;
     margin-bottom: 0.00pt;
     text-align: left;
   }
-  p.docx_Normal span {
+  p.docx_normal span {
     font-family: Liberation Serif;
     color: black;
     min-height: 12.00pt;
     font-size: 12.00pt;
   }
-  p.docx_Style14 {
+  p.docx_style14 {
     margin-top: 12.00pt;
     margin-bottom: 6.00pt;
     text-align: left;
   }
-  p.docx_Style14 span {
+  p.docx_style14 span {
     font-family: Liberation Sans;
     min-height: 14.00pt;
     font-size: 14.00pt;
     color: black;
   }
-  p.docx_Style15 {
+  p.docx_style15 {
     margin-top: 0.00pt;
     margin-bottom: 7.00pt;
     line-height: 1.15;
     text-align: left;
   }
-  p.docx_Style15 span {
+  p.docx_style15 span {
     font-family: Liberation Serif;
     color: black;
     min-height: 12.00pt;
     font-size: 12.00pt;
   }
-  p.docx_Style16 {
+  p.docx_style16 {
     margin-top: 0.00pt;
     margin-bottom: 7.00pt;
     line-height: 1.15;
     text-align: left;
   }
-  p.docx_Style16 span {
+  p.docx_style16 span {
     font-family: Liberation Serif;
     color: black;
     min-height: 12.00pt;
     font-size: 12.00pt;
   }
-  p.docx_Style17 {
+  p.docx_style17 {
     margin-top: 6.00pt;
     margin-bottom: 6.00pt;
     text-align: left;
   }
-  p.docx_Style17 span {
+  p.docx_style17 span {
     font-style: italic;
     min-height: 12.00pt;
     font-size: 12.00pt;
     font-family: Liberation Serif;
     color: black;
   }
-  p.docx_Style18 {
+  p.docx_style18 {
     margin-top: 0.00pt;
     margin-bottom: 0.00pt;
     text-align: left;
   }
-  p.docx_Style18 span {
+  p.docx_style18 span {
     font-family: Liberation Serif;
     color: black;
     min-height: 12.00pt;
     font-size: 12.00pt;
   }
-  p.docx_Style19 {
+  p.docx_style19 {
     margin-top: 0.00pt;
     margin-bottom: 0.00pt;
     text-align: left;
   }
-  p.docx_Style19 span {
+  p.docx_style19 span {
     font-family: Liberation Serif;
     color: black;
     min-height: 12.00pt;
     font-size: 12.00pt;
   }
-  p.docx_Style20 {
+  p.docx_style20 {
     margin-top: 0.00pt;
     margin-bottom: 0.00pt;
     text-align: left;
   }
-  p.docx_Style20 span {
+  p.docx_style20 span {
     font-family: Liberation Serif;
     color: black;
     min-height: 12.00pt;
     font-size: 12.00pt;
   }
-  p.docx_Style21 {
+  p.docx_style21 {
     margin-top: 0.00pt;
     margin-bottom: 0.00pt;
     text-align: left;
   }
-  p.docx_Style21 span {
+  p.docx_style21 span {
     font-family: Liberation Serif;
     color: black;
     min-height: 12.00pt;
     font-size: 12.00pt;
   }
-  </style><div class="docx-wrapper"><section class="docx" style="padding: 84.8pt 56.7pt 84.65pt; width: 595.3pt; min-height: 841.9pt;"><header><p class="docx docx_Style20"><span class="docx">First Header</span></p></header><article><p class="docx docx_Normal"><span class="docx">Content</span><span class="docx"></span></p></article><footer><p class="docx docx_Style21"><span class="docx">First Footer</span></p></footer></section><section class="docx" style="padding: 84.8pt 56.7pt 84.65pt; width: 595.3pt; min-height: 841.9pt;"><header><p class="docx docx_Style20"><span class="docx" style="color: black; min-height: 12pt; font-size: 12pt;">Even</span><span class="docx"> Header</span></p></header><article><p class="docx docx_Normal"><span class="docx"></span><span class="docx"></span></p></article><footer><p class="docx docx_Style21"><span class="docx" style="color: black; min-height: 12pt; font-size: 12pt;">Even</span><span class="docx"> Footer</span></p></footer></section><section class="docx" style="padding: 84.8pt 56.7pt 84.65pt; width: 595.3pt; min-height: 841.9pt;"><header><p class="docx docx_Style20"><span class="docx" style="color: black; min-height: 12pt; font-size: 12pt;">Odd</span><span class="docx"> Header</span></p></header><article><p class="docx docx_Normal"><span class="docx"></span></p></article><footer><p class="docx docx_Style21"><span class="docx" style="color: black; min-height: 12pt; font-size: 12pt;">Odd</span><span class="docx"> Footer</span></p></footer></section></div>
+  </style><div class="docx-wrapper"><section class="docx" style="padding: 84.8pt 56.7pt 84.65pt; width: 595.3pt; min-height: 841.9pt;"><header><p class="docx_style20"><span>First Header</span></p></header><article><p class="docx_normal"><span>Content</span><span></span></p></article><footer><p class="docx_style21"><span>First Footer</span></p></footer></section><section class="docx" style="padding: 84.8pt 56.7pt 84.65pt; width: 595.3pt; min-height: 841.9pt;"><header><p class="docx_style20"><span style="color: black; min-height: 12pt; font-size: 12pt;">Even</span><span> Header</span></p></header><article><p class="docx_normal"><span></span><span></span></p></article><footer><p class="docx_style21"><span style="color: black; min-height: 12pt; font-size: 12pt;">Even</span><span> Footer</span></p></footer></section><section class="docx" style="padding: 84.8pt 56.7pt 84.65pt; width: 595.3pt; min-height: 841.9pt;"><header><p class="docx_style20"><span style="color: black; min-height: 12pt; font-size: 12pt;">Odd</span><span> Header</span></p></header><article><p class="docx_normal"><span></span></p></article><footer><p class="docx_style21"><span style="color: black; min-height: 12pt; font-size: 12pt;">Odd</span><span> Footer</span></p></footer></section></div>
