--- a/tests/render-test/page-layout/result.html
+++ b/tests/render-test/page-layout/result.html
@@ -8,6 +8,7 @@
   .docx table td, .docx table th { vertical-align: top; }
   .docx p { margin: 0pt; min-height: 1em; }
   .docx span { white-space: pre-wrap; overflow-wrap: break-word; }
+  .docx a { color: inherit; text-decoration: inherit; }
   </style><!--docxjs document styles--><style>.docx span {
     font-family: Liberation Serif;
     min-height: 12.00pt;
@@ -15,63 +16,63 @@
   }
   .docx p {
   }
-  p.docx_Normal {
+  p.docx_normal {
   }
-  p.docx_Normal span {
+  p.docx_normal span {
     font-family: Liberation Serif;
     color: black;
     min-height: 12.00pt;
     font-size: 12.00pt;
   }
-  p.docx_Style14 {
+  p.docx_style14 {
     margin-top: 12.00pt;
     margin-bottom: 6.00pt;
   }
-  p.docx_Style14 span {
+  p.docx_style14 span {
     font-family: Liberation Sans;
     min-height: 14.00pt;
     font-size: 14.00pt;
     color: black;
   }
-  p.docx_Style15 {
+  p.docx_style15 {
     margin-top: 0.00pt;
     margin-bottom: 7.00pt;
     line-height: 1.15;
   }
-  p.docx_Style15 span {
+  p.docx_style15 span {
     font-family: Liberation Serif;
     color: black;
     min-height: 12.00pt;
     font-size: 12.00pt;
   }
-  p.docx_Style16 {
+  p.docx_style16 {
     margin-top: 0.00pt;
     margin-bottom: 7.00pt;
     line-height: 1.15;
   }
-  p.docx_Style16 span {
+  p.docx_style16 span {
     font-family: Liberation Serif;
     color: black;
     min-height: 12.00pt;
     font-size: 12.00pt;
   }
-  p.docx_Style17 {
+  p.docx_style17 {
     margin-top: 6.00pt;
     margin-bottom: 6.00pt;
   }
-  p.docx_Style17 span {
+  p.docx_style17 span {
     font-style: italic;
     min-height: 12.00pt;
     font-size: 12.00pt;
     font-family: Liberation Serif;
     color: black;
   }
-  p.docx_Style18 {
+  p.docx_style18 {
   }
-  p.docx_Style18 span {
+  p.docx_style18 span {
     font-family: Liberation Serif;
     color: black;
     min-height: 12.00pt;
     font-size: 12.00pt;
   }
-  </style><div class="docx-wrapper"><section class="docx" style="padding: 56.7pt; width: 595.3pt; min-height: 841.9pt;"><article><p class="docx docx_Normal"><span class="docx">page1</span></p></article></section><section class="docx" style="padding: 56.7pt; width: 841.9pt; min-height: 595.3pt;"><article><p class="docx docx_Normal"><span class="docx">page2</span></p></article></section></div>
+  </style><div class="docx-wrapper"><section class="docx" style="padding: 56.7pt; width: 595.3pt; min-height: 841.9pt;"><article><p class="docx_normal"><span>page1</span></p></article></section><section class="docx" style="padding: 56.7pt; width: 841.9pt; min-height: 595.3pt;"><article><p class="docx_normal"><span>page2</span></p></article></section></div>
