--- a/tests/render-test/text/result.html
+++ b/tests/render-test/text/result.html
@@ -8,6 +8,7 @@
   .docx table td, .docx table th { vertical-align: top; }
   .docx p { margin: 0pt; min-height: 1em; }
   .docx span { white-space: pre-wrap; overflow-wrap: break-word; }
+  .docx a { color: inherit; text-decoration: inherit; }
   </style><!--docxjs document theme values--><style>.docx {
     --docx-majorHAnsi-font: Calibri Light;
     --docx-minorHAnsi-font: Calibri;
@@ -31,85 +32,85 @@
   }
   .docx p {
   }
-  .docx p, p.docx_Normal {
+  .docx p, p.docx_normal {
     margin-top: 0.00pt;
     margin-bottom: 8.00pt;
     line-height: 1.08;
     text-align: left;
   }
-  .docx p, p.docx_Normal span {
+  .docx p, p.docx_normal span {
     font-family: Calibri, var(--docx-minorHAnsi-font);
     color: black;
     min-height: 11.00pt;
     font-size: 11.00pt;
   }
-  .docx span, span.docx_DefaultParagraphFont {
+  .docx span, span.docx_defaultparagraphfont {
   }
-  p.docx_Style14 {
+  p.docx_style14 {
     margin-top: 12.00pt;
     margin-bottom: 6.00pt;
     line-height: 1.08;
     text-align: left;
   }
-  p.docx_Style14 span {
+  p.docx_style14 span {
     font-family: Liberation Sans;
     min-height: 14.00pt;
     font-size: 14.00pt;
     color: black;
   }
-  p.docx_Style15 {
+  p.docx_style15 {
     margin-top: 0.00pt;
     margin-bottom: 7.00pt;
     line-height: 1.15;
     text-align: left;
   }
-  p.docx_Style15 span {
+  p.docx_style15 span {
     font-family: Calibri, var(--docx-minorHAnsi-font);
     color: black;
     min-height: 11.00pt;
     font-size: 11.00pt;
   }
-  p.docx_Style16 {
+  p.docx_style16 {
     margin-top: 0.00pt;
     margin-bottom: 7.00pt;
     line-height: 1.15;
     text-align: left;
   }
-  p.docx_Style16 span {
+  p.docx_style16 span {
     font-family: Calibri, var(--docx-minorHAnsi-font);
     color: black;
     min-height: 11.00pt;
     font-size: 11.00pt;
   }
-  p.docx_Style17 {
+  p.docx_style17 {
     margin-top: 6.00pt;
     margin-bottom: 6.00pt;
     line-height: 1.08;
     text-align: left;
   }
-  p.docx_Style17 span {
+  p.docx_style17 span {
     font-style: italic;
     min-height: 12.00pt;
     font-size: 12.00pt;
     font-family: Calibri, var(--docx-minorHAnsi-font);
     color: black;
   }
-  p.docx_Style18 {
+  p.docx_style18 {
     margin-top: 0.00pt;
     margin-bottom: 8.00pt;
     line-height: 1.08;
     text-align: left;
   }
-  p.docx_Style18 span {
+  p.docx_style18 span {
     font-family: Calibri, var(--docx-minorHAnsi-font);
     color: black;
     min-height: 11.00pt;
     font-size: 11.00pt;
   }
-  .docx table, table.docx_TableNormal td {
+  .docx table, table.docx_tablenormal td {
     padding-top: 0.00pt;
     padding-left: 5.40pt;
     padding-bottom: 0.00pt;
     padding-right: 5.40pt;
   }
-  </style><div class="docx-wrapper"><section class="docx" style="padding: 72pt; width: 612pt; min-height: 792pt;"><article><p class="docx docx_Normal"><span class="docx">Test</span></p><p class="docx docx_Normal"><span class="docx" style="color: rgb(196, 89, 17);">Test color</span></p><p class="docx docx_Normal"><span class="docx"><span> </span>Tab text</span></p><p class="docx docx_Normal" style="text-align: center;"><span class="docx">Text center</span></p><p class="docx docx_Normal" style="text-align: right;"><span class="docx">Text right</span></p><p class="docx docx_Normal" style="margin-top: 0pt; margin-bottom: 8pt; text-align: left;"><span class="docx">     </span><span class="docx">text          text               text</span></p></article></section></div>
+  </style><div class="docx-wrapper"><section class="docx" style="padding: 72pt; width: 612pt; min-height: 792pt;"><article><p class="docx_normal"><span>Test</span></p><p class="docx_normal"><span style="color: rgb(196, 89, 17);">Test color</span></p><p class="docx_normal"><span><span> </span>Tab text</span></p><p class="docx_normal" style="text-align: center;"><span>Text center</span></p><p class="docx_normal" style="text-align: right;"><span>Text right</span></p><p class="docx_normal" style="margin-top: 0pt; margin-bottom: 8pt; text-align: left;"><span>     </span><span>text          text               text</span></p></article></section></div>
